fix overflow test

--- a/css/style.css
+++ b/css/style.css
@@ -52,7 +52,7 @@ main {
 }
 
 .fs-xl {
-    font-size: 2.9rem;
+    font-size: 2.6rem;
 }
 
 .fs-lg {
@@ -157,7 +157,7 @@ header svg {
 }
 
 header img {
-    width: 2.75rem;
+    width: 2.5rem;
 }
 
 .text-center {
